--- a/README.textile
+++ b/README.textile
@@ -2,7 +2,7 @@ h1. Vimfiles
 
 h2. Configuration
 
-Although not necessary, "matcher":https://github.com/burke/matcher has been included to have a better search with CtrlP. 
+Although not necessary, "matcher":https://github.com/burke/matcher has been included to have a better search experience with CtrlP. 
 Just go into .vim/bin/matcher and @make@ to enable it
 
 h2. This fork
